--- a/portfolio.html
+++ b/portfolio.html
@@ -139,7 +139,7 @@ I am excited about the possibility of collaborating with you to create something
                         <div class="p1">Thank you for visiting my portfolio!</div>
                         <br>
                         <br>
-                        <div class="p2">I'm currently open for remote full time work. Feel free to contact me @.</div>
+                        <div class="p2">I'm currently open for remote full time work. Feel free to contact me @</div>
                         <br>
 
                         
